# mefai-engine

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: btc_momentum_backtest.md  mean_reversion_backtest.md
configs/: default.yaml
examples/: custom_strategy.py  risk_management.py  simple_backtest.py
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  service.yaml
src/mefai_engine/: __init__.py  __main__.py  app.py  cli.py  config.py  constants.py  exceptions.py  types.py
src/mefai_engine/agents/: analyst.py  base.py  orchestrator.py  risk_agent.py  sentinel.py  signal_tracker.py
src/mefai_engine/api/: __init__.py  middleware.py  tenants.py  websocket.py
src/mefai_engine/api/routes/: backtest.py  billing.py  data.py  models.py  monitoring.py  prometheus.py  system.py  trading.py  webhook.py
src/mefai_engine/backtest/: engine.py  stats.py  walk_forward.py
src/mefai_engine/exchange/: __init__.py  base.py  binance.py  factory.py  models.py  ws_manager.py
src/mefai_engine/execution/: __init__.py  executor.py
src/mefai_engine/features/: drift.py  hmm_regime.py  microstructure.py  onchain.py  pipeline.py  regime.py  registry.py  sentiment.py  technical.py
src/mefai_engine/models/: __init__.py  base.py  registry.py
src/mefai_engine/models/classical/: __init__.py  gradient_boost.py  hpo.py
src/mefai_engine/models/deep/: transformer.py
src/mefai_engine/models/nlp/: __init__.py  sentiment.py
src/mefai_engine/models/rl/: __init__.py  env.py  ppo_agent.py
src/mefai_engine/monitoring/: audit_log.py  metrics.py  reports.py  telegram.py
src/mefai_engine/risk/: circuit_breaker.py  correlation.py  kelly.py  limits.py  liquidity.py  manager.py  pnl_tracker.py  var.py
src/mefai_engine/strategy/: __init__.py  base.py  meta_learner.py  signal.py
tests/unit/: test_backtest.py  test_config.py  test_features.py  test_risk.py  test_strategy.py  test_types.py
