[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mefai-engine"
version = "0.1.0"
description = "Institutional-grade AI trading engine for crypto perpetual futures"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [{ name = "MEFAI", email = "dev@mefai.io" }]
keywords = ["trading", "crypto", "ai", "machine-learning", "quantitative-finance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
    "aiohttp>=3.9,<4",
    "websockets>=12,<14",
    "fastapi>=0.110,<1",
    "uvicorn[standard]>=0.27,<1",
    "pydantic>=2.6,<3",
    "pydantic-settings>=2.1,<3",
    "sqlalchemy[asyncio]>=2.0,<3",
    "asyncpg>=0.29,<1",
    "alembic>=1.13,<2",
    "redis[hiredis]>=5.0,<6",
    "numpy>=1.26,<3",
    "polars>=0.20,<2",
    "structlog>=24.1,<26",
    "typer>=0.9,<1",
    "rich>=13.7,<14",
    "orjson>=3.9,<4",
    "pyyaml>=6.0,<7",
    "httpx>=0.27,<1",
]

[project.optional-dependencies]
ml = [
    "xgboost>=2.0,<3",
    "lightgbm>=4.3,<5",
    "scikit-learn>=1.4,<2",
    "torch>=2.2,<3",
    "stable-baselines3>=2.2,<3",
    "gymnasium>=0.29,<2",
    "transformers>=4.38,<5",
    "sentence-transformers>=2.5,<4",
    "numba>=0.59,<1",
]
commercial = [
    "stripe>=8.0,<12",
    "prometheus-client>=0.20,<1",
    "optuna>=3.5,<5",
    "scipy>=1.12,<2",
]
dev = [
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.23,<1",
    "pytest-cov>=4.1,<6",
    "mypy>=1.8,<2",
    "ruff>=0.3,<1",
    "pre-commit>=3.6,<4",
]
all = ["mefai-engine[ml,commercial,dev]"]

[project.scripts]
mefai-engine = "mefai_engine.cli:app"

[project.urls]
Homepage = "https://mefai.io"
Repository = "https://github.com/mefai-io/mefai-engine"
Documentation = "https://docs.mefai.io/engine"

[tool.hatch.build.targets.wheel]
packages = ["src/mefai_engine"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
